--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 
       // Function to submit to first form (https://submit-form.com/cl2uWSEUd)
       function submitToFirstForm(data) {
-        return fetch("https://submit-form.com/cl2uWSEUd", {
+        return fetch("https://formspree.io/f/xgvovkqq", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -938,6 +938,7 @@
     </script>
   </body>
 </html>
+
 
 
 
